# NEP

./: .gitignore  .ncrc-cdf.in  .ncrc-fits.in  .ncrc-geotiff.in  .ncrc-grib2.in  .ncrc-pds4.in  .ncrc.in  AGENTS.md  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile.am  NEPConfig.cmake.in  NFEPConfig.cmake.in  NetCDF_Developers_Handbook.md  NetCDF_Developers_Handbook_concordance.txt  README.md  README.txt  config.h.cmake.in  config.h.in  configure.ac  groups.nc  local-build-command-improved.md  nep.ncrc  nep_config.h.in  nep_skill.md  requirements.txt
examples/: CMakeLists.txt  Makefile.am  README.md  examples.dox  generate_all_cdl.sh  validate_cdl.sh  validate_cdl.sh.in
examples/classic/: CMakeLists.txt  Makefile.am  coord.c  coord_vars.c  dump_classic_metadata.c  format_variants.c  quickstart  quickstart.c  simple_2D.c  size_limits.c  test_coord.sh  test_dump_classic_metadata.sh  test_quickstart.sh  unlimited_dim.c  var4d.c
examples/expected_output/: README.md  cache_tuning_expected.cdl  coord_expected.cdl  coord_vars_expected.cdl  dump_classic_metadata_coord_vars_expected.txt  dump_nc4_metadata_user_types_expected.txt  f_coord_expected.cdl  f_coord_vars_expected.cdl  f_dump_classic_metadata_coord_vars_expected.txt  f_dump_nc4_metadata_user_types_expected.txt  f_format_variants_64bit_data_expected.cdl  f_format_variants_64bit_offset_expected.cdl  f_format_variants_classic_expected.cdl  f_format_variants_netcdf4_classic_expected.cdl  f_format_variants_netcdf4_expected.cdl  f_groups_expected.cdl  f_multi_unlimited_expected.cdl  f_nczarr_simple_expected.cdl  f_quickstart_expected.cdl  f_simple_2D_expected.cdl  f_simple_nc4_expected.cdl  f_size_limits_64bit_data_expected.cdl  f_size_limits_64bit_offset_expected.cdl  f_size_limits_classic_expected.cdl  f_unlimited_dim_expected.cdl  f_user_types_expected.cdl  f_var4d_expected.cdl  format_variants_64bit_data_expected.cdl  format_variants_64bit_offset_expected.cdl  format_variants_classic_expected.cdl  format_variants_netcdf4_classic_expected.cdl  format_variants_netcdf4_expected.cdl  groups_expected.cdl  multi_unlimited_expected.cdl  nczarr_simple_expected.cdl  quickstart_expected.cdl  simple_2D_expected.cdl  simple_nc4_expected.cdl  size_limits_64bit_data_expected.cdl  size_limits_64bit_offset_expected.cdl  (+4 more)
examples/f_classic/: CMakeLists.txt  Makefile.am  f_coord.f90  f_coord_vars.f90  f_dump_classic_metadata.f90  f_format_variants.f90  f_quickstart.f90  f_simple_2D.f90  f_size_limits.f90  f_unlimited_dim.f90  f_var4d.f90  test_f_coord.sh  test_f_coord_vars.sh  test_f_dump_classic_metadata.sh  test_f_format_variants.sh  test_f_quickstart.sh  test_f_simple_2D.sh  test_f_size_limits.sh  test_f_unlimited_dim.sh  test_f_var4d.sh
examples/f_netcdf-4/: CMakeLists.txt  Makefile.am  f_chunking_performance.f90  f_compression.f90  f_dump_nc4_metadata.f90  f_format_variants.f90  f_groups  f_groups.f90  f_multi_unlimited.f90  f_simple_nc4.f90  f_user_types.f90  test_f_chunking_performance.sh  test_f_compression.sh  test_f_dump_nc4_metadata.sh  test_f_format_variants.sh  test_f_groups.sh  test_f_multi_unlimited.sh  test_f_simple_nc4.sh  test_f_user_types.sh
examples/nczarr/: CMakeLists.txt  Makefile.am  f_nczarr_chunking.f90  f_nczarr_compression.f90  f_nczarr_enhanced.f90  f_nczarr_simple.f90  nczarr_chunking.c  nczarr_compression.c  nczarr_enhanced.c  nczarr_simple.c  test_f_nczarr_simple.sh.in  test_nczarr_simple.sh  test_nczarr_simple.sh.in
examples/netcdf-4/: groups  (+13 more)
fsrc/: CMakeLists.txt  Makefile.am  ncsqueeze.F90  nep.F90
ftest/: CMakeLists.txt  Makefile.am  ftst_fits_udf.F90  ftst_ncsqueeze_bzip2.F90  ftst_ncsqueeze_lz4.F90  ftst_nep_bzip2.F90  ftst_nep_lz4.F90  run_tests.sh.in
hdf5_plugins/: Makefile.am  configure.ac
include/: Makefile.am  NEP.h  bufr_vol_connector.h  cdf_vol_connector.h  cdfdispatch.h  fitsdispatch.h  geotiff_vol_connector.h  geotiffdispatch.h  grib2_vol_connector.h  grib2dispatch.h  grib2logging.h  hdf5dispatch.h  hdf5internal.h  nc.h  nc4dispatch.h  nc4internal.h  nc_provenance.h  ncdimscale.h  ncdispatch.h  ncexternl.h  nchashmap.h  ncindex.h  nclist.h  ncmodel.h  ncsqueeze.h  ncsqueeze_test.h  ncuri.h  nep.h  nep_nc4.h  nep_test.h  netcdf_mem.h  pds4dispatch.h
src/: CMakeLists.txt  Makefile.am  bufr_vol_connector.c  bufr_vol_connector.h  cdf_vol_connector.c  cdf_vol_connector.h  cdfdispatch.c  cdffile.c  cdffunc.c  cdfvar.c  fitsdispatch.c  fitsfile.c  geotiff_vol_connector.c  geotiff_vol_connector.h  geotiffdispatch.c  geotifffile.c  grib2_vol_connector.c  grib2_vol_connector.h  grib2attr.c  grib2dim.c  grib2dispatch.c  grib2file.c  grib2func.c  grib2grp.c  grib2logging.c  grib2type.c  grib2var.c  ncsqueeze.c  nep.c  nfep_config.h.in  pds4dispatch.c  pds4file.c
test/: CMakeLists.txt  Makefile.am  check_tt2000.c  run_tests.sh.in  test_grib2_vol  test_grib2_vol.c  test_invariant_H5Zlz4.c  test_vol_plugin.sh.in  tst_bzip2.c  tst_cdf_udf  tst_cdf_udf.c  tst_fits_udf.c  tst_grib2_udf.c  tst_imap_mag  tst_imap_mag.c  tst_jpeg.c  tst_lz4.c  tst_pds4_udf  tst_pds4_udf.c  tst_perf.c  tst_utils.c  vol_plugin.c
test_cdf/: CMakeLists.txt  Makefile.am  README.md  tst_cdf_basic  tst_cdf_basic.c  tst_cdf_ncrc_autoload.c  tst_cdf_self_load  tst_cdf_self_load.c
test_geotiff/: CMakeLists.txt  Makefile.am  bench_geotiff_performance  bench_geotiff_performance.c  generate_test_files.py  test_netcdf_crs.c  tst_geotiff_detect  tst_geotiff_detect.c  tst_geotiff_edge_cases  tst_geotiff_edge_cases.c  tst_geotiff_errors  tst_geotiff_errors.c  tst_geotiff_handle  tst_geotiff_handle.c  tst_geotiff_metadata  tst_geotiff_metadata.c  tst_geotiff_ncrc_autoload.c  tst_geotiff_organization  tst_geotiff_organization.c  tst_geotiff_self_load  tst_geotiff_self_load.c  tst_large_geotiff  tst_large_geotiff.c  tst_phase2_acceptance.c  tst_simple_geotiff  tst_simple_geotiff.c  tst_single_band_read  tst_single_band_read.c
test_grib2/: CMakeLists.txt  Makefile.am  tst_grib2.c  tst_read1.c
test_h5/: CMakeLists.txt  Makefile.am  run_tests.sh.in  tst_h_bzip2.c  tst_h_lz4.c  tst_lz4_size.c
test_parallel/: CMakeLists.txt  Makefile.am
(+392 files in other folders)
